--- a/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_1/console_log.html
+++ b/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_1/console_log.html
@@ -37,6 +37,8 @@
 
 <span class="ansi31">CreateConversation(name=None web=[web]review plan, participants=['Performer', 'PlanReviewer'])</span>
 
+<span class="ansi31">CreateConversation(name=None web=[web]review analysis, participants=['AnalysisReviewer', 'Performer'])</span>
+
 <span class="ansi31">CreateConversation(name=None web=[web]debug, participants=['Debugger', 'Performer'])</span>
 
 <span class="ansi31">CreateConversation(name=None web=[web]results interpretation, participants=['InterpretationReviewer', 'Performer'])</span>
@@ -10740,6 +10742,124 @@ environments internationally could provide comparative insights, extending the d
 
 <span class="ansi36">[20] SURROGATE {Performer} -&gt; discussion : 
 latex \section{Discussion}  This study undertakes an in-depth exploration of the interplay [...] the global implications of digital politics.</span>
+<span class="ansi31">CreateConversation(name=reflect_on_analysis web=[web]review analysis, participants=['AnalysisReviewer', 'Performer']) -&gt; reflect_on_analysis</span>
+
+<span class="ansi35">==== Starting conversation ===========================================================================================================================</span>
+<span class="ansi35">                                                                 reflect_on_analysis                                                                  </span>
+<span class="ansi35">======================================================================================================================================================</span>
+<span class="ansi32">[1] ----- SYSTEM casting  {Performer} -&gt; reflect_on_analysis -----------------------------------------------------------------------------------------
+</span><span class="ansi32">
+You are a scientist who needs to reflect qualities and correctness of the analysis.
+</span>
+<span class="ansi32">------------------------------------------------------------------------------------------------------------------------------------------------------</span>
+
+<span class="ansi32">[2] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_general_dataset_description&gt;  : 
+OVERALL DESCRIPTION OF THE DATASET  * Rationale: The dataset maps US Congress's Twitter [...] but should not single out specific states.</span>
+
+<span class="ansi36">[3] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_general_dataset_description&gt;  : 
+Thank you for the Overall Description of the Dataset.</span>
+
+<span class="ansi32">[4] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_hypothesis_testing_plan&gt;  : 
+Here is our Hypothesis Testing Plan:  Hypothesis: The pattern of Twitter interactions between [...] Algorithm (e.g., Louvain algorithm)</span>
+
+<span class="ansi36">[5] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_hypothesis_testing_plan&gt;  : 
+Thank you for the Hypothesis Testing Plan.</span>
+
+<span class="ansi32">[6] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_codes:data_analysis&gt;  : 
+Here is our Data Analysis Code: python  # IMPORT import pandas as pd  import numpy as np from [...] as f:  pickle.dump(additional_results, f)</span>
+
+<span class="ansi36">[7] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_codes:data_analysis&gt;  : 
+Thank you for the Data Analysis Code.</span>
+
+<span class="ansi34">[8] COMMENTER -&gt; reflect_on_analysis &lt;after_background&gt;  : Background messages completed. Requesting "qualities and correctness of the analysis".</span>
+
+<span class="ansi32">[9] ----- USER {AnalysisReviewer} -&gt; reflect_on_analysis ---------------------------------------------------------------------------------------------
+</span><span class="ansi32">Based on the data description, the hypothesis testing plan, and the data analysis code, evaluate the
+following 5 criteria of the task at hand and the provided code:
+
+- Simplicity: How complex is the task? Very simple tasks (10) correspond to single regression analysis or
+similar, while very complex tasks (1) require several analysis steps, such as the generation of new
+data columns, complicated data analysis functions such as machine learning models and/or complex data input
+files, such as non-tabular data.
+
+- Clarity: How readable and understandable is the code? In very clear code (10), all variables have
+non-ambiguous names and all data transformations are easy to follow. Further, code comments are helpful and
+also non-ambiguous. Unclear codes (1) contain, for example, convoluted data operations, such as for loops and
+unclear variable naming, and no or limited code comments.
+
+- Adequate code for hypothesis testing plan: How well does the data analysis code align with the hypothesis
+testing plan? A very adequate code (10) performs all analyses that are specified in the
+hypothesis testing plan, but not any other analysis, while an inadequate code (1) performs only analyses
+which are not specified in the hypothesis testing plan.
+
+- Adequate code for data features: How adequate is the code in light of the data features? Are all relevant
+data features used in the code, while not relevant information is not included? Are the data features which
+are used in the analysis reflect what they stand for? For example, an adequate code (10) includes all
+relevant confounding factors, while inadequate code leaves out relevant data features and uses far
+fetched proxies, for example using economic status as a proxy for happiness. As part of this reflection, list
+all the variables that are requested to be tested in the hypothesis testing plan and their corresponding
+counterpart in the code, and vice versa - list all the variables in the code and their corresponding
+counterpart in the hypothesis testing plan. If there exists a mismatch, the score corresponds to (1).
+
+- Error free: Is there any error in the code? For example, are all the mathematical formulas, if applicable,
+correct? Do variables correspond to the respective output? If the code is error free, evaluate it with 10.
+If there are major errors, such as errors in formulas, it corresponds to 1.
+
+Your response should start with a reflection on the relevant points for each criterion, this reflection should
+include examples from the provided scientific products and be very thorough. It should conclude with a
+final score from 1 to 10 representing a summary of the reflection.
+
+At the end of your response you should provide a final verdict, it should be formatted as a Python dictionary
+mapping each of the 5 criteria: ['simplicity','clarity','adequate_hypothesis','adequate_data','error_free']
+to a score from 1 to 10.
+For example, it may look as something like that:
+{'simplicity': 1,
+'clarity': 7,
+'adequate_hypothesis': 4,
+'adequate_data': 5,
+'error_free': 8}</span>
+<span class="ansi32">------------------------------------------------------------------------------------------------------------------------------------------------------</span>
+
+<span class="ansi31">Using gpt-4 (max 8192 tokens) for 1870 context tokens and 500 expected tokens.</span>
+<span class="ansi36">[10] ==== ASSISTANT{'model_engine': gpt-4} {Performer} -&gt; reflect_on_analysis ========================================================================
+</span><span class="ansi96">
+CONTEXT TOTAL (1870 tokens):
+# 0    SYSTEM (  15 tokens): You are a scientist who [...] of the analysis.
+# 1      USER ( 336 tokens): OVERALL DESCRIPTION OF THE [...] specific states.
+# 2 SURROGATE (  11 tokens): Thank you for the Overall Description of the Dataset.
+# 3      USER ( 169 tokens): Here is our Hypothesis [...] Louvain algorithm)
+# 4 SURROGATE (  11 tokens): Thank you for the Hypothesis Testing Plan.
+# 5      USER ( 656 tokens): Here is our Data Analysis [...] f)
+# 6 SURROGATE (   9 tokens): Thank you for the Data Analysis Code.
+# 7      USER ( 663 tokens): Based on the data [...] 5, 'error_free': 8}
+
+# 8 ASSISTANT ( 442 tokens): Simplicity: This task [...] 'error_free': 8}
+                             {'model_engine': gpt-4}
+</span><span class="ansi36">
+
+Simplicity: This task involves the use of network theory, handling of adjacency matrices, application of chi-square tests and ANOVA. It requires
+handling heterogenous data types (tabular and network), and intricate algorithms (Community Detection). Therefore, the task is not a very simple task,
+but neither is it overly complex. It can be stated to have an intermediate complexity due to its multistage and multidisciplinary approach. I would
+rate it a 5.
+
+Clarity: The code seems clear and well-structured. Each section of the code, e.g., loading data, preprocessing, analysis is separated, making it easy
+to follow. Descriptive comments have been included to clarify the intention behind each block of the code. Also, the variable names appear to non-
+ambiguous and meaningful. I would rate it a 9 for clarity.
+
+Adequate Code for Hypothesis Testing plan: The code runs a Chi-Square test to check if inter-party interactions transcend partisan lines. It also fits
+an ANOVA model for checking if interactions are influenced by the state represented. Details on the Community Detection Algorithm are absent, however.
+Therefore, I would rate it a 7 for Adequacy for Hypothesis Testing.
+
+Adequate Code for Data Features: The analysis makes use of all the relevant features in the data for its calculations: Degree for frequency of Twitter
+interactions, political party affiliation, state represented and the chamber. The analysis thus doesn't seem to neglect any data features or use 'far-
+fetched' proxies for its calculations. In the absence of any mismatch, I would rate it a 10 for Adequacy of Data Features.
+
+Error-Free: The code does not contain any visible syntax errors. Further, the formulas used for Chi-Square tests and ANOVA are appropriate for the
+testing hypotheses. However, the final verdict here would require actually running the code on the data. So based upon visual inspection, I will rate
+it an 8.
+
+Final Verdict: {'simplicity': 5, 'clarity': 9, 'adequate_hypothesis': 7, 'adequate_data': 10, 'error_free': 8}</span>
+<span class="ansi36">======================================================================================================================================================</span>
 
 </pre>
 </body>
