--- a/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_0/console_log.html
+++ b/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_0/console_log.html
@@ -37,6 +37,8 @@
 
 <span class="ansi31">CreateConversation(name=None web=[web]review plan, participants=['Performer', 'PlanReviewer'])</span>
 
+<span class="ansi31">CreateConversation(name=None web=[web]review analysis, participants=['AnalysisReviewer', 'Performer'])</span>
+
 <span class="ansi31">CreateConversation(name=None web=[web]debug, participants=['Debugger', 'Performer'])</span>
 
 <span class="ansi31">CreateConversation(name=None web=[web]results interpretation, participants=['InterpretationReviewer', 'Performer'])</span>
@@ -7606,6 +7608,127 @@ comprehensive understanding of the communication dynamics at play.
 
 <span class="ansi36">[20] SURROGATE {Performer} -&gt; discussion : 
 latex \section{Discussion}  In the contemporary age of digitization, platforms like Twitter have [...] of the communication dynamics at play.</span>
+<span class="ansi31">CreateConversation(name=reflect_on_analysis web=[web]review analysis, participants=['AnalysisReviewer', 'Performer']) -&gt; reflect_on_analysis</span>
+
+<span class="ansi35">==== Starting conversation ===========================================================================================================================</span>
+<span class="ansi35">                                                                 reflect_on_analysis                                                                  </span>
+<span class="ansi35">======================================================================================================================================================</span>
+<span class="ansi32">[1] ----- SYSTEM casting  {Performer} -&gt; reflect_on_analysis -----------------------------------------------------------------------------------------
+</span><span class="ansi32">
+You are a scientist who needs to reflect qualities and correctness of the analysis.
+</span>
+<span class="ansi32">------------------------------------------------------------------------------------------------------------------------------------------------------</span>
+
+<span class="ansi32">[2] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_general_dataset_description&gt;  : 
+OVERALL DESCRIPTION OF THE DATASET  * Rationale: The dataset maps US Congress's Twitter [...] but should not single out specific states.</span>
+
+<span class="ansi36">[3] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_general_dataset_description&gt;  : 
+Thank you for the Overall Description of the Dataset.</span>
+
+<span class="ansi32">[4] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_hypothesis_testing_plan&gt;  : 
+Here is our Hypothesis Testing Plan:  Hypothesis: Members of the House have more interactions [...] for confounding variables (Party and State)</span>
+
+<span class="ansi36">[5] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_hypothesis_testing_plan&gt;  : 
+Thank you for the Hypothesis Testing Plan.</span>
+
+<span class="ansi32">[6] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_codes:data_analysis&gt;  : 
+Here is our Data Analysis Code: python  # IMPORT import pandas as pd import networkx as nx import [...] as f:  pickle.dump(additional_results, f)</span>
+
+<span class="ansi36">[7] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_codes:data_analysis&gt;  : 
+Thank you for the Data Analysis Code.</span>
+
+<span class="ansi34">[8] COMMENTER -&gt; reflect_on_analysis &lt;after_background&gt;  : Background messages completed. Requesting "qualities and correctness of the analysis".</span>
+
+<span class="ansi32">[9] ----- USER {AnalysisReviewer} -&gt; reflect_on_analysis ---------------------------------------------------------------------------------------------
+</span><span class="ansi32">Based on the data description, the hypothesis testing plan, and the data analysis code, evaluate the
+following 5 criteria of the task at hand and the provided code:
+
+- Simplicity: How complex is the task? Very simple tasks (10) correspond to single regression analysis or
+similar, while very complex tasks (1) require several analysis steps, such as the generation of new
+data columns, complicated data analysis functions such as machine learning models and/or complex data input
+files, such as non-tabular data.
+
+- Clarity: How readable and understandable is the code? In very clear code (10), all variables have
+non-ambiguous names and all data transformations are easy to follow. Further, code comments are helpful and
+also non-ambiguous. Unclear codes (1) contain, for example, convoluted data operations, such as for loops and
+unclear variable naming, and no or limited code comments.
+
+- Adequate code for hypothesis testing plan: How well does the data analysis code align with the hypothesis
+testing plan? A very adequate code (10) performs all analyses that are specified in the
+hypothesis testing plan, but not any other analysis, while an inadequate code (1) performs only analyses
+which are not specified in the hypothesis testing plan.
+
+- Adequate code for data features: How adequate is the code in light of the data features? Are all relevant
+data features used in the code, while not relevant information is not included? Are the data features which
+are used in the analysis reflect what they stand for? For example, an adequate code (10) includes all
+relevant confounding factors, while inadequate code leaves out relevant data features and uses far
+fetched proxies, for example using economic status as a proxy for happiness. As part of this reflection, list
+all the variables that are requested to be tested in the hypothesis testing plan and their corresponding
+counterpart in the code, and vice versa - list all the variables in the code and their corresponding
+counterpart in the hypothesis testing plan. If there exists a mismatch, the score corresponds to (1).
+
+- Error free: Is there any error in the code? For example, are all the mathematical formulas, if applicable,
+correct? Do variables correspond to the respective output? If the code is error free, evaluate it with 10.
+If there are major errors, such as errors in formulas, it corresponds to 1.
+
+Your response should start with a reflection on the relevant points for each criterion, this reflection should
+include examples from the provided scientific products and be very thorough. It should conclude with a
+final score from 1 to 10 representing a summary of the reflection.
+
+At the end of your response you should provide a final verdict, it should be formatted as a Python dictionary
+mapping each of the 5 criteria: ['simplicity','clarity','adequate_hypothesis','adequate_data','error_free']
+to a score from 1 to 10.
+For example, it may look as something like that:
+{'simplicity': 1,
+'clarity': 7,
+'adequate_hypothesis': 4,
+'adequate_data': 5,
+'error_free': 8}</span>
+<span class="ansi32">------------------------------------------------------------------------------------------------------------------------------------------------------</span>
+
+<span class="ansi31">Using gpt-4 (max 8192 tokens) for 1606 context tokens and 500 expected tokens.</span>
+<span class="ansi36">[10] ==== ASSISTANT{'model_engine': gpt-4} {Performer} -&gt; reflect_on_analysis ========================================================================
+</span><span class="ansi96">
+CONTEXT TOTAL (1606 tokens):
+# 0    SYSTEM (  15 tokens): You are a scientist who [...] of the analysis.
+# 1      USER ( 336 tokens): OVERALL DESCRIPTION OF THE [...] specific states.
+# 2 SURROGATE (  11 tokens): Thank you for the Overall Description of the Dataset.
+# 3      USER (  47 tokens): Here is our Hypothesis [...] (Party and State)
+# 4 SURROGATE (  11 tokens): Thank you for the Hypothesis Testing Plan.
+# 5      USER ( 514 tokens): Here is our Data Analysis [...] f)
+# 6 SURROGATE (   9 tokens): Thank you for the Data Analysis Code.
+# 7      USER ( 663 tokens): Based on the data [...] 5, 'error_free': 8}
+
+# 8 ASSISTANT ( 509 tokens): - Simplicity: The task is [...] 'error_free': 10}.
+                             {'model_engine': gpt-4}
+</span><span class="ansi36">
+
+- Simplicity: The task is of medium complexity level, considering the dataset and the hypothesis testing plan. The task involves generation of new
+data columns (Source_Node_int and Target_Node_int), joining operations, calculation of cross-tabulation and chi-square test of independence which are
+not overly complicated but do require several steps. Also, the data input file is in a tabular format, not adding complexity. Hence, the simplicity
+score would be around 7.
+
+- Clarity: The code is quite readable and clear. All variable names appropriately represent their contents, making them unambiguous. The
+transformation operations make logical sense and are easy to follow. Perhaps, one area of improvement could be more comments describing the necessity
+or the reason behind certain operations, like the conversion of node IDs to integer. This would make tracking the goals of the code easier for a new
+reader. All in all, the clarity score can be set at 8.
+
+- Adequate code for hypothesis testing plan: The code correctly aligns with the hypothesis testing plan. The only analysis performed in the code is a
+Chi-square test of independence, which is exactly specified in the hypothesis testing plan. There are no other unexpected or outlying analyses.
+Therefore, the score for this criteria is 10.
+
+- Adequate code for data features: The code reasonably handles all data features mentioned in the data description and hypothesis testing plan,
+namely, 'Chamber'. The key features requested in the hypothesis testing plan correspond to 'Chamber_Source' and 'Chamber_Target' in the code. The chi-
+square test specifically tests the difference in interactions between House and Senate, which are seen in 'Chamber_Source' and 'Chamber_Target'. The
+code does not use any proxies or irrelevant information. However, the hypothesis testing plan did also mention consideration of confounding variables
+(Party, State) that the code did not incorporate. Therefore, the score for this criteria would be 8.
+
+- Error free: From a first look, there seems to be no error in the code. The data transformation steps seem to be mathematically sound. The formulas,
+in particular, the chi-square test formula, appear to be used correctly. Hence, the score for this criterion would be 10.
+
+In summary, considering the reflections and the scores assigned, the final verdict can be stated as follows:
+{'simplicity': 7, 'clarity': 8, 'adequate_hypothesis': 10, 'adequate_data': 8, 'error_free': 10}.</span>
+<span class="ansi36">======================================================================================================================================================</span>
 
 </pre>
 </body>
