--- a/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_4/console_log.html
+++ b/data_to_paper/data_to_paper_examples/examples/projects/congress_twitter/outputs/open_goal_accum_4/console_log.html
@@ -37,6 +37,8 @@
 
 <span class="ansi31">CreateConversation(name=None web=[web]review plan, participants=['Performer', 'PlanReviewer'])</span>
 
+<span class="ansi31">CreateConversation(name=None web=[web]review analysis, participants=['AnalysisReviewer', 'Performer'])</span>
+
 <span class="ansi31">CreateConversation(name=None web=[web]debug, participants=['Debugger', 'Performer'])</span>
 
 <span class="ansi31">CreateConversation(name=None web=[web]results interpretation, participants=['InterpretationReviewer', 'Performer'])</span>
@@ -8207,6 +8209,129 @@ latex \section{Discussion}  This study embarked on a deep exploration aimed at u
 
 <span class="ansi36">[20] SURROGATE {Performer} -&gt; discussion : 
 latex \section{Discussion}  This study embarked on a deep exploration aimed at understanding the [...] promising paths for future investigations.</span>
+<span class="ansi31">CreateConversation(name=reflect_on_analysis web=[web]review analysis, participants=['AnalysisReviewer', 'Performer']) -&gt; reflect_on_analysis</span>
+
+<span class="ansi35">==== Starting conversation ===========================================================================================================================</span>
+<span class="ansi35">                                                                 reflect_on_analysis                                                                  </span>
+<span class="ansi35">======================================================================================================================================================</span>
+<span class="ansi32">[1] ----- SYSTEM casting  {Performer} -&gt; reflect_on_analysis -----------------------------------------------------------------------------------------
+</span><span class="ansi32">
+You are a scientist who needs to reflect qualities and correctness of the analysis.
+</span>
+<span class="ansi32">------------------------------------------------------------------------------------------------------------------------------------------------------</span>
+
+<span class="ansi32">[2] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_general_dataset_description&gt;  : 
+OVERALL DESCRIPTION OF THE DATASET  * Rationale: The dataset maps US Congress's Twitter [...] but should not single out specific states.</span>
+
+<span class="ansi36">[3] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_general_dataset_description&gt;  : 
+Thank you for the Overall Description of the Dataset.</span>
+
+<span class="ansi32">[4] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_hypothesis_testing_plan&gt;  : 
+Here is our Hypothesis Testing Plan:  Hypothesis: Members from states with a higher number of [...] variables such as Party and Chamber.</span>
+
+<span class="ansi36">[5] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_hypothesis_testing_plan&gt;  : 
+Thank you for the Hypothesis Testing Plan.</span>
+
+<span class="ansi32">[6] USER {AnalysisReviewer} -&gt; reflect_on_analysis &lt;background_codes:data_analysis&gt;  : 
+Here is our Data Analysis Code: python  # IMPORT import pandas as pd import networkx as nx import [...] as f:  pickle.dump(additional_results, f)</span>
+
+<span class="ansi36">[7] SURROGATE {Performer} -&gt; reflect_on_analysis &lt;background_thanks_codes:data_analysis&gt;  : 
+Thank you for the Data Analysis Code.</span>
+
+<span class="ansi34">[8] COMMENTER -&gt; reflect_on_analysis &lt;after_background&gt;  : Background messages completed. Requesting "qualities and correctness of the analysis".</span>
+
+<span class="ansi32">[9] ----- USER {AnalysisReviewer} -&gt; reflect_on_analysis ---------------------------------------------------------------------------------------------
+</span><span class="ansi32">Based on the data description, the hypothesis testing plan, and the data analysis code, evaluate the
+following 5 criteria of the task at hand and the provided code:
+
+- Simplicity: How complex is the task? Very simple tasks (10) correspond to single regression analysis or
+similar, while very complex tasks (1) require several analysis steps, such as the generation of new
+data columns, complicated data analysis functions such as machine learning models and/or complex data input
+files, such as non-tabular data.
+
+- Clarity: How readable and understandable is the code? In very clear code (10), all variables have
+non-ambiguous names and all data transformations are easy to follow. Further, code comments are helpful and
+also non-ambiguous. Unclear codes (1) contain, for example, convoluted data operations, such as for loops and
+unclear variable naming, and no or limited code comments.
+
+- Adequate code for hypothesis testing plan: How well does the data analysis code align with the hypothesis
+testing plan? A very adequate code (10) performs all analyses that are specified in the
+hypothesis testing plan, but not any other analysis, while an inadequate code (1) performs only analyses
+which are not specified in the hypothesis testing plan.
+
+- Adequate code for data features: How adequate is the code in light of the data features? Are all relevant
+data features used in the code, while not relevant information is not included? Are the data features which
+are used in the analysis reflect what they stand for? For example, an adequate code (10) includes all
+relevant confounding factors, while inadequate code leaves out relevant data features and uses far
+fetched proxies, for example using economic status as a proxy for happiness. As part of this reflection, list
+all the variables that are requested to be tested in the hypothesis testing plan and their corresponding
+counterpart in the code, and vice versa - list all the variables in the code and their corresponding
+counterpart in the hypothesis testing plan. If there exists a mismatch, the score corresponds to (1).
+
+- Error free: Is there any error in the code? For example, are all the mathematical formulas, if applicable,
+correct? Do variables correspond to the respective output? If the code is error free, evaluate it with 10.
+If there are major errors, such as errors in formulas, it corresponds to 1.
+
+Your response should start with a reflection on the relevant points for each criterion, this reflection should
+include examples from the provided scientific products and be very thorough. It should conclude with a
+final score from 1 to 10 representing a summary of the reflection.
+
+At the end of your response you should provide a final verdict, it should be formatted as a Python dictionary
+mapping each of the 5 criteria: ['simplicity','clarity','adequate_hypothesis','adequate_data','error_free']
+to a score from 1 to 10.
+For example, it may look as something like that:
+{'simplicity': 1,
+'clarity': 7,
+'adequate_hypothesis': 4,
+'adequate_data': 5,
+'error_free': 8}</span>
+<span class="ansi32">------------------------------------------------------------------------------------------------------------------------------------------------------</span>
+
+<span class="ansi31">Using gpt-4 (max 8192 tokens) for 1734 context tokens and 500 expected tokens.</span>
+<span class="ansi36">[10] ==== ASSISTANT{'model_engine': gpt-4} {Performer} -&gt; reflect_on_analysis ========================================================================
+</span><span class="ansi96">
+CONTEXT TOTAL (1734 tokens):
+# 0    SYSTEM (  15 tokens): You are a scientist who [...] of the analysis.
+# 1      USER ( 336 tokens): OVERALL DESCRIPTION OF THE [...] specific states.
+# 2 SURROGATE (  11 tokens): Thank you for the Overall Description of the Dataset.
+# 3      USER ( 203 tokens): Here is our Hypothesis [...] Party and Chamber.
+# 4 SURROGATE (  11 tokens): Thank you for the Hypothesis Testing Plan.
+# 5      USER ( 486 tokens): Here is our Data Analysis [...] f)
+# 6 SURROGATE (   9 tokens): Thank you for the Data Analysis Code.
+# 7      USER ( 663 tokens): Based on the data [...] 5, 'error_free': 8}
+
+# 8 ASSISTANT ( 430 tokens): Simplicity: The task, while [...] 'error_free': 10}
+                             {'model_engine': gpt-4}
+</span><span class="ansi36">
+
+Simplicity:
+The task, while requiring some data cleaning and transformation, mostly relies on simple descriptive statistics and a single regression analysis. It
+involves creating new data columns and uses a typical tabular dataset. The use of NetworkX for handling graph data adds some complexity, although the
+usage here is straightforward. Thus, due to these sequences, I would rate it as an 8.
+
+Clarity:
+The code, in general, is well-structured and easy to read. Variables are named non-ambiguously, and the sequence of actions is clear. The purpose of
+each line of code is clear, even though there are limited comments within the code. A little more commentary would have made the code clearer for a
+non-expert. Considering this, I would rate it as an 8.
+
+Adequate code for hypothesis testing plan:
+The hypotheses raised revolve around the number of interactions and unique interactions. Although the code provides a variable for engagement counts,
+it does not directly test the proposed hypotheses, nor does it test for unique interactions. Thus, the code is somewhat mismatched with the hypothesis
+testing plan. Based on that, I would rate it as a 4.
+
+Adequate code for data features:
+The code makes good use of the given data features. It includes all relevant confounding factors such as Party and Chamber, which are used as control
+variables. However, while the given hypothesis testing plan also refers to the population size of states, the code doesn't include it. Due to that, I
+would rate it as a 7.
+
+Error-free:
+The Python code appears to be error-free with correct Python syntax, appropriate usage of pandas dataframes operations, and correct utilization of the
+OLS model for regression analysis in statsmodels. It does not seem to contain any mathematical errors, and variable correspondence seems to be handled
+correctly. Therefore, I would rate it as a 10.
+
+Here are the final scores:
+{'simplicity': 8, 'clarity': 8, 'adequate_hypothesis': 4, 'adequate_data': 7, 'error_free': 10}</span>
+<span class="ansi36">======================================================================================================================================================</span>
 
 </pre>
 </body>
