rerun 005 after fix

--- a/data_to_paper/data_to_paper_examples/examples/projects/t_tube_insertion/outputs/run005/console_log.html
+++ b/data_to_paper/data_to_paper_examples/examples/projects/t_tube_insertion/outputs/run005/console_log.html
@@ -220,7 +220,7 @@ Also, the cript checks for unexisting (empty) categorical variables. If found, t
 Applicable'.</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;6&gt; - &lt;-1&gt; [1 MESSAGES]) -&gt; Data Exploration Code</span>
 
 <span class="ansi31">AppendMessage, Code is freshly re-posted, as if it was the FIRST response.</span>
@@ -316,7 +316,7 @@ Now you should be able to run this python script and it will generate a file nam
 information.</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;5&gt; - &lt;-1&gt; [4 MESSAGES]) -&gt; Data Exploration Code</span>
 
 <span class="ansi31">AppendMessage, Adding the debugged code as if it was the original response.</span>
@@ -1217,7 +1217,7 @@ models, calculates the residuals of each model's predictions comparing to the tr
 additional results such as the total number of observations and each machine learning model's mean squared error on test data.</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;12&gt; - &lt;-1&gt; [1 MESSAGES]) -&gt; Data Analysis Code</span>
 
 <span class="ansi31">AppendMessage, Code is freshly re-posted, as if it was the FIRST response.</span>
@@ -1395,7 +1395,7 @@ Here is the modified code to address the issues:
 <span class="ansi38-197">+</span><span class="ansi38-15">df1</span><span class="ansi38-15">[</span><span class="ansi38-186">'</span><span class="ansi38-186">p_value</span><span class="ansi38-186">'</span><span class="ansi38-15">]</span><span class="ansi38-15"> </span><span class="ansi38-197">=</span><span class="ansi38-15"> </span><span class="ansi38-15">p_values</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">AppendMessage, Debug iteration 2/20: Runtime exception in code</span>
 <span class="ansi32">[16] ---- USER {Debugger} -&gt; "Data Analysis Code"  ---------------------------------------------------------------------------------------------------
 </span><span class="ansi32">I ran the code and got the following error message:
@@ -1500,7 +1500,7 @@ Here is the corrected code:
 <span class="ansi38-197">+</span><span class="ansi38-15">df1</span><span class="ansi38-15">[</span><span class="ansi38-186">'</span><span class="ansi38-186">p_value</span><span class="ansi38-186">'</span><span class="ansi38-15">]</span><span class="ansi38-15"> </span><span class="ansi38-197">=</span><span class="ansi38-15"> </span><span class="ansi38-15">p_values</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;12&gt; - &lt;-1&gt; [5 MESSAGES]) -&gt; Data Analysis Code</span>
 
 <span class="ansi31">AppendMessage, Code is freshly re-posted, as if it was the FIRST response.</span>
@@ -1670,7 +1670,7 @@ Sure, here is the corrected code with exact names for t-test result access:
 <span class="ansi38-197">+</span><span class="ansi38-15">    </span><span class="ansi38-15">p_values</span><span class="ansi38-197">.</span><span class="ansi38-15">append</span><span class="ansi38-15">(</span><span class="ansi38-15">t_test_result</span><span class="ansi38-197">.</span><span class="ansi38-15">pvalue</span><span class="ansi38-15">)</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">AppendMessage, Debug iteration 4/20: Runtime exception in code</span>
 <span class="ansi32">[16] ---- USER {Debugger} -&gt; "Data Analysis Code"  ---------------------------------------------------------------------------------------------------
 </span><span class="ansi32">I ran the code and got the following error message:
@@ -1817,7 +1817,7 @@ An important note: The above code writes only one pickle file for the residuals 
 more tables, ensuring each table gets a separate file.</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;11&gt; - &lt;-1&gt; [6 MESSAGES]) -&gt; Data Analysis Code</span>
 
 <span class="ansi31">AppendMessage, Adding the debugged code as if it was the original response.</span>
@@ -2165,7 +2165,7 @@ Alright, let's correct the script accordingly:
 The above script corrects the issues mentioned. All hyperparameters are tuned adequately and report is added into the additional_results.pkl file.</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;11&gt; - &lt;-1&gt; [4 MESSAGES]) -&gt; Data Analysis Code</span>
 
 <span class="ansi31">AppendMessage, Adding the debugged code as if it was the original response.</span>
@@ -2604,7 +2604,7 @@ Here is your corrected Python code:
 <span class="ansi38-197">+</span><span class="ansi38-15">    </span><span class="ansi38-15">}</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-CodeRunner: Running and caching output.
+CodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;11&gt; - &lt;-1&gt; [4 MESSAGES]) -&gt; Data Analysis Code</span>
 
 <span class="ansi31">AppendMessage, Adding the debugged code as if it was the original response.</span>
@@ -3290,7 +3290,7 @@ CONTEXT TOTAL (3446 tokens):
 <span class="ansi38-15">    </span><span class="ansi38-15">legend</span><span class="ansi38-197">=</span><span class="ansi38-15">legend1</span><span class="ansi38-15">)</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-UtilsCodeRunner: Running and caching output.
+UtilsCodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;12&gt; - &lt;-1&gt; [1 MESSAGES]) -&gt; LaTeX Table Design Code</span>
 
 <span class="ansi31">AppendMessage, Code is freshly re-posted, as if it was the FIRST response.</span>
@@ -3539,7 +3539,7 @@ Here is the updated Python code with narrower table labels:
 This revised code shortens the dataset row labels. This change allows your LaTeX table to correctly fit within the margins of your document.</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-UtilsCodeRunner: Running and caching output.
+UtilsCodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;12&gt; - &lt;-1&gt; [3 MESSAGES]) -&gt; LaTeX Table Design Code</span>
 
 <span class="ansi31">AppendMessage, Code is freshly re-posted, as if it was the FIRST response.</span>
@@ -3662,7 +3662,7 @@ instead of assigning directly to `index`. It retains the functionality of loadin
 scientific full names, providing definitions in the legend and saving the modified DataFrame as a LaTeX file.</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-UtilsCodeRunner: Running and caching output.
+UtilsCodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;12&gt; - &lt;-1&gt; [3 MESSAGES]) -&gt; LaTeX Table Design Code</span>
 
 <span class="ansi31">AppendMessage, Code is freshly re-posted, as if it was the FIRST response.</span>
@@ -3754,7 +3754,7 @@ I apologize for the oversight on the table label format. I have revised and corr
 <span class="ansi38-197">+</span><span class="ansi38-15">    </span><span class="ansi38-15">label</span><span class="ansi38-197">=</span><span class="ansi38-186">'</span><span class="ansi38-186">table:comparison</span><span class="ansi38-186">'</span><span class="ansi38-15">,</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-UtilsCodeRunner: Running and caching output.
+UtilsCodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;12&gt; - &lt;-1&gt; [3 MESSAGES]) -&gt; LaTeX Table Design Code</span>
 
 <span class="ansi31">AppendMessage, Code is freshly re-posted, as if it was the FIRST response.</span>
@@ -3849,7 +3849,7 @@ Sure, I have revised the code by removing the character "_" from the index label
 <span class="ansi38-197">+</span><span class="ansi38-15">df1</span><span class="ansi38-15"> </span><span class="ansi38-197">=</span><span class="ansi38-15"> </span><span class="ansi38-15">df1</span><span class="ansi38-197">.</span><span class="ansi38-15">rename</span><span class="ansi38-15">(</span><span class="ansi38-15">index</span><span class="ansi38-197">=</span><span class="ansi38-81">lambda</span><span class="ansi38-15"> </span><span class="ansi38-15">x</span><span class="ansi38-15">:</span><span class="ansi38-15"> </span><span class="ansi38-15">x</span><span class="ansi38-197">.</span><span class="ansi38-15">replace</span><span class="ansi38-15">(</span><span class="ansi38-186">"</span><span class="ansi38-186">_</span><span class="ansi38-186">"</span><span class="ansi38-15">,</span><span class="ansi38-15"> </span><span class="ansi38-186">"</span><span class="ansi38-186"> </span><span class="ansi38-186">"</span><span class="ansi38-15">)</span><span class="ansi38-197">.</span><span class="ansi38-15">replace</span><span class="ansi38-15">(</span><span class="ansi38-186">"</span><span class="ansi38-186"> vs height formula</span><span class="ansi38-186">"</span><span class="ansi38-15">,</span><span class="ansi38-15"> </span><span class="ansi38-186">"</span><span class="ansi38-186"> vs Height</span><span class="ansi38-186">"</span><span class="ansi38-15">)</span><span class="ansi38-197">.</span><span class="ansi38-15">replace</span><span class="ansi38-15">(</span><span class="ansi38-186">"</span><span class="ansi38-186"> vs age formula</span><span class="ansi38-186">"</span><span class="ansi38-15">,</span><span class="ansi38-15"> </span><span class="ansi38-186">"</span><span class="ansi38-186"> vs Age</span><span class="ansi38-186">"</span><span class="ansi38-15">)</span><span class="ansi38-197">.</span><span class="ansi38-15">replace</span><span class="ansi38-15">(</span><span class="ansi38-186">"</span><span class="ansi38-186"> vs id formula</span><span class="ansi38-186">"</span><span class="ansi38-15">,</span><span class="ansi38-15"> </span><span class="ansi38-186">"</span><span class="ansi38-186"> vs ID</span><span class="ansi38-186">"</span><span class="ansi38-15">)</span><span class="ansi38-15">)</span>
 <span class="ansi36">======================================================================================================================================================</span>
 
-UtilsCodeRunner: Running and caching output.
+UtilsCodeRunner: Using cached output.
 <span class="ansi31">DeleteMessages(&lt;11&gt; - &lt;-1&gt; [4 MESSAGES]) -&gt; LaTeX Table Design Code</span>
 
 <span class="ansi31">AppendMessage, Adding the debugged code as if it was the original response.</span>
